--- a/app/src/main/res/layout/activity_all_topic.xml
+++ b/app/src/main/res/layout/activity_all_topic.xml
@@ -59,12 +59,12 @@
 
                 </com.potato.library.view.NormalEmptyView>
 
-                <com.potato.library.view.refresh.ListSwipeLayout
+                <com.potato.library.view.refresh.HFRecyclerSwipeLayout
                     android:id="@+id/swipe_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ListView
+                    <android.support.v7.widget.RecyclerView
                         android:id="@+id/list"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -75,7 +75,7 @@
                         android:listSelector="@android:color/transparent"
                         android:scrollbars="none" />
 
-                </com.potato.library.view.refresh.ListSwipeLayout>
+                </com.potato.library.view.refresh.HFRecyclerSwipeLayout>
 
 
             </LinearLayout>
