--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,4 +1,5 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -8,46 +9,37 @@
             type="String" />
     </data>
 
-    <RelativeLayout
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-
-        <RelativeLayout
-            android:id="@+id/rl_header"
-            android:layout_width="fill_parent"
-            android:layout_height="50dip"
-            android:background="@color/sticker_blue"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="FitTime"
-                android:textColor="@color/potato_white"
-                android:textSize="@dimen/txt_max" />
-
-        </RelativeLayout>
-
-
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/rl_header"
-            android:orientation="vertical">
+            android:layout_height="@dimen/detail_backdrop_height"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:fitsSystemWindows="true">
 
-            <LinearLayout
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/potato_white"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginStart="48dp"
+                app:expandedTitleMarginEnd="64dp">
 
+                <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax" />
                 <LinearLayout
                     android:id="@+id/rl_title"
                     android:layout_width="match_parent"
@@ -95,6 +87,7 @@
                     </RelativeLayout>
 
                     <Button
+                        android:visibility="gone"
                         android:id="@+id/bt_focus"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
@@ -108,177 +101,196 @@
                     android:layout_width="fill_parent"
                     android:layout_height="1px"
                     android:background="@color/divider"></View>
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:layout_collapseMode="pin" />
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="24dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:background="@color/potato_white">
 
                 <LinearLayout
+                    android:id="@+id/ll_tag"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:id="@+id/ll_tag"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/tv_tag_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/potato_black"
+                        android:textSize="@dimen/txt_normal"
+                        android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/tv_tag_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/str_tag"
-                            android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_small" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="1px"
-                        android:layout_height="30dp"
-                        android:background="@color/divider"></View>
-
-                    <LinearLayout
-                        android:id="@+id/ll_zan"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/tv_zan_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/str_zan"
-                            android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_small" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="1px"
-                        android:layout_height="30dp"
-                        android:background="@color/divider"></View>
-
-                    <LinearLayout
-                        android:id="@+id/ll_focus"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/tv_focus_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/str_focus"
-                            android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_small" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="1px"
-                        android:layout_height="30dp"
-                        android:background="@color/divider"></View>
-
-                    <LinearLayout
-                        android:id="@+id/ll_fans"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/tv_fans_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/str_fans"
-                            android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_small" />
-                    </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/str_tag"
+                        android:textColor="@color/potato_gray3"
+                        android:textSize="@dimen/txt_small" />
 
                 </LinearLayout>
 
                 <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1px"
-                    android:background="@color/divider" />
+                    android:layout_width="1px"
+                    android:layout_height="30dp"
+                    android:background="@color/divider"></View>
 
                 <LinearLayout
+                    android:id="@+id/ll_zan"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
 
-                    <com.potato.library.view.NormalEmptyView
-                        android:id="@+id/empty_view"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent">
+                    <TextView
+                        android:id="@+id/tv_zan_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/potato_black"
+                        android:textSize="@dimen/txt_normal"
+                        android:textStyle="bold" />
 
-                    </com.potato.library.view.NormalEmptyView>
-
-                    <com.potato.library.view.refresh.ListSwipeLayout
-                        android:id="@+id/swipe_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <ListView
-                            android:id="@+id/list"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@android:color/transparent"
-                            android:cacheColorHint="@android:color/transparent"
-                            android:divider="@android:color/transparent"
-                            android:dividerHeight="0px"
-                            android:listSelector="@android:color/transparent"
-                            android:scrollbars="none" />
-
-                    </com.potato.library.view.refresh.ListSwipeLayout>
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/str_zan"
+                        android:textColor="@color/potato_gray3"
+                        android:textSize="@dimen/txt_small" />
                 </LinearLayout>
+
+                <View
+                    android:layout_width="1px"
+                    android:layout_height="30dp"
+                    android:background="@color/divider"></View>
+
+                <LinearLayout
+                    android:id="@+id/ll_focus"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_focus_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/potato_black"
+                        android:textSize="@dimen/txt_normal"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/str_focus"
+                        android:textColor="@color/potato_gray3"
+                        android:textSize="@dimen/txt_small" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="1px"
+                    android:layout_height="30dp"
+                    android:background="@color/divider"></View>
+
+                <LinearLayout
+                    android:id="@+id/ll_fans"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_fans_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/potato_black"
+                        android:textSize="@dimen/txt_normal"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/str_fans"
+                        android:textColor="@color/potato_gray3"
+                        android:textSize="@dimen/txt_small" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1px"
+                android:background="@color/divider" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.potato.library.view.NormalEmptyView
+                    android:id="@+id/empty_view"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                </com.potato.library.view.NormalEmptyView>
+
+                <com.potato.library.view.refresh.HFRecyclerSwipeLayout
+                    android:id="@+id/swipe_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:cacheColorHint="@android:color/transparent"
+                        android:divider="@android:color/transparent"
+                        android:dividerHeight="0px"
+                        android:listSelector="@android:color/transparent"
+                        android:scrollbars="none" />
+
+                </com.potato.library.view.refresh.HFRecyclerSwipeLayout>
+
 
             </LinearLayout>
         </LinearLayout>
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_below="@id/rl_header"
-            android:background="@drawable/bottom_shadow_bg" />
-    </RelativeLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_anchor="@id/appbar"
+            app:layout_anchorGravity="bottom|right|end"
+            android:src="@drawable/ic_fav"
+            android:layout_margin="@dimen/fab_margin"
+            android:clickable="true"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
