--- a/app/src/main/res/layout/fragment_topic_list.xml
+++ b/app/src/main/res/layout/fragment_topic_list.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -25,36 +24,35 @@
     </data>
 
     <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.potato.library.view.NormalEmptyView
+        android:id="@+id/empty_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    </com.potato.library.view.NormalEmptyView>
+
+    <com.potato.library.view.refresh.HFRecyclerSwipeLayout
+        android:id="@+id/swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.potato.library.view.NormalEmptyView
-            android:id="@+id/empty_view"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-        </com.potato.library.view.NormalEmptyView>
-
-        <com.potato.library.view.refresh.ListSwipeLayout
-            android:id="@+id/swipe_container"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:background="@android:color/transparent"
+            android:cacheColorHint="@android:color/transparent"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0px"
+            android:listSelector="@android:color/transparent"
+            android:scrollbars="none" />
 
-            <ListView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:cacheColorHint="@android:color/transparent"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="0px"
-                android:listSelector="@android:color/transparent"
-                android:scrollbars="none" />
-
-        </com.potato.library.view.refresh.ListSwipeLayout>
+    </com.potato.library.view.refresh.HFRecyclerSwipeLayout>
 
 
-    </LinearLayout>
+</LinearLayout>
 </layout>
