--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -13,100 +13,75 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/detail_backdrop_height"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:fitsSystemWindows="true">
+            android:layout_height="192dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginStart="48dp"
-                app:expandedTitleMarginEnd="64dp">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
+                >
 
                 <ImageView
                     android:id="@+id/backdrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:fitsSystemWindows="true"
-                    app:layout_collapseMode="parallax" />
+                    android:scaleType="fitXY"
+                    app:layout_collapseMode="parallax"
+                    />
+
                 <LinearLayout
                     android:id="@+id/rl_title"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="10dp"
+                    app:layout_collapseMode="parallax">
 
-                    <ImageView
+                    <com.makeramen.roundedimageview.RoundedImageView
                         android:id="@+id/iv_avatar"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:scaleType="fitXY"
-                        android:src="@drawable/def_gray_small" />
+                        android:src="@drawable/def_gray_small"
+                        app:riv_corner_radius="30dip" />
 
-                    <RelativeLayout
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/tv_time"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2">
-
-                        <TextView
-                            android:id="@+id/tv_name"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:text="name"
-                            android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_max" />
-
-
-                        <TextView
-                            android:id="@+id/tv_time"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:paddingBottom="10dp"
-                            android:paddingLeft="10dp"
-                            android:text="time"
-                            android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_min" />
-
-                    </RelativeLayout>
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="10dp"
+                        android:text="time"
+                        android:textColor="@color/potato_white"
+                        android:textSize="@dimen/txt_normal_l" />
 
                     <Button
-                        android:visibility="gone"
                         android:id="@+id/bt_focus"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:background="@drawable/selector_bg_red"
                         android:text="@string/str_focus"
-                        android:textColor="@color/potato_white" />
+                        android:textColor="@color/potato_white"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1px"
-                    android:background="@color/divider"></View>
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:layout_collapseMode="pin" />
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -117,14 +92,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="24dp">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:background="@color/potato_white"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp"
-                android:background="@color/potato_white">
+                android:padding="10dp">
 
                 <LinearLayout
                     android:id="@+id/ll_tag"
@@ -248,6 +224,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
                 android:background="@color/divider" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -284,13 +261,19 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            android:layout_height="wrap_content"
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
-            app:layout_anchor="@id/appbar"
-            app:layout_anchorGravity="bottom|right|end"
-            android:src="@drawable/ic_fav"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:onClick="onClick"
+            android:src="@drawable/ic_fav"
+            app:layout_anchor="@id/collapsing_toolbar"
+            app:layout_anchorGravity="bottom|right"
+            app:elevation="6dp"
+            app:fabSize="mini"
+            app:pressedTranslationZ="12dp"
+            app:rippleColor="#a6a6a6"/>
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
