--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -20,8 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:background="@color/potato_white"
             android:orientation="vertical">
 
@@ -85,12 +86,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.potato.library.view.KeepRatioImageView
-                    android:id="@+id/picture"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/def_gray_big1" />
+                    android:layout_height="wrap_content">
+
+                    <com.potato.library.view.KeepRatioImageView
+                        android:id="@+id/picture"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/def_gray_big1" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@id/picture"
+                        android:layout_alignLeft="@id/picture"
+                        android:layout_alignRight="@id/picture"
+                        android:layout_alignTop="@id/picture"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        tools:ignore="NewApi" />
+                </RelativeLayout>
             </RelativeLayout>
 
             <View
@@ -117,15 +134,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    tools:ignore="NewApi">
 
                     <ImageView
                         android:id="@+id/iv_heart"
@@ -146,8 +167,13 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    tools:ignore="NewApi">
 
                     <ImageView
                         android:id="@+id/iv_comment"
@@ -168,14 +194,24 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_share" />
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:src="@drawable/ic_share"
+                    tools:ignore="NewApi" />
 
                 <ImageView
                     android:id="@+id/iv_more"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_ellipsis" />
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:src="@drawable/ic_ellipsis"
+                    tools:ignore="NewApi" />
 
             </LinearLayout>
 
